hub/cluster/rook-ceph/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: ceph-dashboard.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: ceph-dashboard.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: dashboard-certificate
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  namespace: rook-ceph
spec:
  hostnames:
    - ceph-dashboard.hub.samcday.com
  parentRefs:
    - name: dashboard
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: objectstore
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: obj.hub.samcday.com
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: obj.hub.samcday.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: rgw-cert
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: objectstore
  namespace: rook-ceph
spec:
  hostnames:
    - obj.hub.samcday.com
  parentRefs:
    - name: objectstore
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-rgw-ceph-objectstore
          port: 80
